test/MC/SVE/regression-tests/negative_tests/sve-ld1h-018.s
// RUN: not llvm-mc -triple=aarch64-none-linux-gnu -show-encoding -mattr=+sve  2>&1 < %s| FileCheck %s
// VecU64CLoad2LSSZ
// Offset register Rm cannot be xzr
ld1h z9.d, p1/z, [x5, xzr, lsl #1]
// CHECK: {{(error\:\ index\ must\ be\ an\ integer\ in\ range)|(error\:\ index\ must\ be\ a\ multiple\ of)}}
